--- a/subprojects/dependency-management/preview-features.adoc
+++ b/subprojects/dependency-management/preview-features.adoc
@@ -1,28 +1,35 @@
-# Gradle 5.0 preview features
+# Gradle 5.0 Feature Previews
 
 ## Enhanced support for Maven repositories
 
-Because these improvements change the resolution result for certain Gradle `Configuration` instances, we consider them to be "potentially breaking changes". As such, these improvements are _opt-in_ for the Gradle 4.x stream of releases, but we expect to make them the default in Gradle 5.0.
+These improvements can change the resolution result for certain Gradle configurations. Thus we consider them to be _potentially breaking changes_. As such, these improvements are opt-in for the Gradle 4.x stream of releases, but are scheduled to become the default in Gradle 5.0.
 
-### Dependency constraints from Maven POM files
+[NOTE]
+Activate this feature in Gradle 4.6+ by setting `org.gralde.advancedpomsupport=true` in _gradle.properties_ or calling Gradle with
+`--advanced-pom-support`
 
-With the introduction of 'dependency constraints', Gradle can now provide a better experience for consumers of Maven repositories. There is not a clear 1:1 mapping between dependency constraints and Maven POM features, but there are some cases where it makes sense for Gradle to map a Maven POM feature to a dependency constraint. 
+### Maven `optional` dependencies
 
-#### Maven `optional` dependencies
+Whenever a POM file contains a dependency declaration with `<optional>true</optional>`, Gradle will create a _dependency constraint_. This constraint will produce the expected result for an optional dependency: if the dependency module is brought in by another, non-optional, dependency declaration, then the constraint will apply when choosing the version for that dependency (e.g., if the optional dependency defines a higher version, that one is chosen).
 
-Whenever a POM file contains a dependency with `<optional>true</optional>`, Gradle 5.0 will create a _dependency constraint_ for that dependency. This constraint will produce the expected result for an optional dependency: if the dependency module is brought into the graph by another edge, then the constraint will apply when choosing the version for that dependency.
+### Maven BOM files and `<dependencyManagement>`
 
-#### Maven BOM files and `<dependencyManagement>`
+Gradle now provides support for "Maven BOM" files, which are effectively POM files that use `<dependencyManagement>` to control the dependency versions of direct and transitive dependencies. The BOM support in Gradle works similar to the use of `<scope>import</scope>` when depending on a BOM in Maven, but is done via a regular dependency declaration on the BOM:
 
-Gradle now provides support for a "Maven BOM" file, which is effectively a POM file that uses `<dependencyManagement>` to control the dependency versions for another project. Since Gradle has no concept of a "parent POM" file, support for Maven BOM is similar to the use of `<scope>import</scope>` when depending on a BOM in Maven, but is done via a regular dependency declaration.
+```
+dependencies {
+  implementation 'org.springframework.boot:spring-boot-dependencies:1.5.8.RELEASE'
+}
+```
 
-When Gradle discovers a dependency on a Maven BOM file, all dependencies declared in the `<dependencyManagement>` block are treated as Gradle _dependency constraints_. This means that any `<dependencyManagement>` versions defined in the BOM file can impact the resolved graph. Gradle treats any POM file with `<packaging>pom</packaging>` as a potential BOM file: if a dependency resolves to a Maven module with `pom` packaging, then a _dependency constraint_ will be produced for every dependency declared in a `dependencyManagement` block. 
+When Gradle discovers a dependency on a Maven BOM file, all dependencies declared in the `<dependencyManagement>` block are treated as Gradle _dependency constraints_. This means that any `<dependencyManagement>` versions defined in the BOM file can impact the resolved graph. Gradle treats any POM file with `<packaging>pom</packaging>` as BOM file: if a dependency resolves to a Maven module with `pom` packaging, then a _dependency constraint_ will be produced for every dependency declared in a `dependencyManagement` block.
 
 Note one major difference between the handling of BOM files in Maven and Gradle: a dependency on a BOM is just a regular dependency, and can be published and resolved transitively just like any other dependency. This is different from Maven, where a BOM is _imported_ into the build, and downstream consumers do not automatically benefit from the dependency constraints defined. For example, if project A depends on project B, and project B _imports_ the BOM for project C, then a dependency declared in project A will not use the versions defined in project C.
 
 ### Runtime scoped dependencies are not included in Java compile classpath
 
-Since v1.0, Gradle has been included `runtime` scoped dependencies in the Java compile classpath. While this often works fine, it has a number of drawbacks:
+Since Gradle 1.0, `runtime` scoped dependencies have been included in the Java compile classpath. While this often works fine, it has a number of drawbacks:
+
 - It's easy to publish a compile-time dependency with `runtime` scope, causing issues for non-Gradle consumers
 - The compile classpath is much larger than it needs to be, slowing down compilation
 - The compile classpath includes `runtime` files that do not impact compilation, resulting in unnecessary re-compilation when these files change.
@@ -32,14 +39,30 @@ With Gradle 5.0, we intend to change this behaviour. A Maven POM will be conside
 ## New Gradle `.module` metadata format
 
 In order to provide rich support for variant-aware dependency management and dependency constraints, Gradle 5.0 will define a new module metadata format, that can be used in conjunction with Ivy descriptor and Maven POM files in existing repositories.
-This new metadata format is under active development, so we have made it _opt-in_ for the Gradle 4.x stream.
 
-Issues with enabling it by default in Gradle 4.x:
+The new metadata format is still under active development. The latest version of the specification can be found https://github.com/gradle/gradle/blob/master/subprojects/docs/src/docs/design/gradle-module-metadata-specification.md[here]. Currently there are the following issues with enabling it in Gradle 4.x:
+
 - We do not yet guarantee backward or forward compatibility for the metadata file format. Thus, resolution may change when upgrading Gradle, if a metadata file is published with an old format.
 - An additional request is required for Maven and Ivy repositories to check for the new metadata file.
 
-## Gradle does not search for `.jar` file when POM/Ivy file is missing
+[NOTE]
+Activate this feature in Gradle 4.6+ by setting `org.gralde.gradlemetadata=true` in _gradle.properties_ or calling Gradle with
+`--gradle-metadata`
 
-A regular `maven` or `ivy` module will be defined by the presence of a `pom` or `ivy.xml` file. However, Gradle will also search for a `.jar` file in these repositories, in the off chance that the module was "published" without any metadata file. If the jar file is discovered, it's considered to be a module with no dependencies.
+### Publishing `.module` metadata files
 
-This behaviour will no longer be the default in Gradle 5.0, reducing the number of network requests and working in a less surprising manner. It will be possible to opt-in to these "artifact only modules" by configuring the `metadataSources` for a repository.
+If this feature preview is activated, the _maven-publish_ and _ivy-publlish_ plugins automatically publish a `.module` file in addition to the `pom`/`iny.xml` metadata file. If these modules are consumed by Gradle, _dependency constraints_ and _version constraints_, for examples strict versions, are preserved. By still publishing the traditional metadata formats, compatibility with Maven and Ivy is still ensured as much as possible.
+
+The `.module` files are used to automatically publish the `api` and `runtime` variants of  Java libraries. These variants are honoured during dependency resolution. Additional publishing features will be added in the future which will allow for the publication of additional variants.
+
+### Consuming `.module` metadata files
+
+If this feature preview is activated, Gradle automatically searches for a `.module` file for each dependency in a Maven or Ivy repository. If the file is found, it is preferred over the `pom`/`ivy.xml` file.
+
+If a `.module` file is found, _dependency constraints_ and _version constraints_ of the dependency are consumed from that file and are honored during dependency resolution.
+
+### Gradle does not search for `.jar` file when metadata files are missing
+
+With this feature preview, Gradle expects a `.module` or a  `.pom`/`ivy.xml` file for each regular Maven or Ivy module. Previously, Gradle also searched for a `.jar` file in repositories in the absence of any metadata file. This was to cover the unusual case that the module was published without any metadata file. If the jar file was discovered, it was considered to be a module with no dependencies.
+
+This behaviour is no longer active with this feature preview and will no longer be the default in Gradle 5.0. This reduces the number of network requests and makes module discovery less magical. It is still possible to opt into support for such _artifact only modules_ by configuring the `metadataSources` for a repository.
