Normalize navigation and chapter titles for multi-projects docs
Signed-off-by: Eric Wendelin <eric@gradle.com>

--- a/subprojects/docs/src/docs/userguide/multiProjectBuilds.adoc
+++ b/subprojects/docs/src/docs/userguide/multiProjectBuilds.adoc
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 [[multi_project_builds]]
-== Multi-project Builds
+== Authoring Multi-Project Builds
 
 The powerful support for multi-project builds is one of Gradle's unique selling points. This topic is also the most intellectually challenging.
 
