--- a/subprojects/docs/src/docs/userguide/introMultiProjectBuilds.adoc
+++ b/subprojects/docs/src/docs/userguide/introMultiProjectBuilds.adoc
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 [[intro_multi_project_builds]]
-== Introduction to multi-project builds
+== Executing Multi-Project Builds
 
 Only the smallest of projects has a single build file and source tree, unless it happens to be a massive, monolithic application. It’s often much easier to digest and understand a project that has been split into smaller, inter-dependent modules. The word “inter-dependent” is important, though, and is why you typically want to link the modules together through a single build.
 
