Avoid mentioning that software model is deprecated
Fixes gradle/dotorg-docs#154

Signed-off-by: Eric Wendelin <eric@gradle.com>

--- a/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
+++ b/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
@@ -504,7 +504,7 @@ Running `gradle properties` gives you a list of the properties of the selected p
 
 ==== Software Model reports
 
-You can get a hierarchical view of elements for <<software_model,software model>> projects (deprecated) using the `model` task:
+You can get a hierarchical view of elements for <<software_model,software model>> projects using the `model` task:
 
 ----
 ❯ gradle model
