Give a better example for executing multiple tasks in CLI doc
Fixes gradle/dotorg-docs#149

Signed-off-by: Eric Wendelin <eric@gradle.com>

--- a/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
+++ b/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
@@ -88,10 +88,10 @@ When executing the Gradle Wrapper from subprojects, one must reference `gradlew`
 ====
 
 ==== Executing multiple tasks
-You can also specify multiple tasks. For example, the following will execute the `compile` and `test` tasks in the order that they are listed on the command-line and will also execute the dependencies for each task.
+You can also specify multiple tasks. For example, the following will execute the `test` and `deploy` tasks in the order that they are listed on the command-line and will also execute the dependencies for each task.
 
 ----
-❯ gradle compile test
+❯ gradle test deploy
 ----
 
 [[sec:excluding_tasks_from_the_command_line]]
