Link to task dependencies in CLI doc executing tasks section
Fixes gradle/dotorg-docs#151

Signed-off-by: Eric Wendelin <eric@gradle.com>

--- a/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
+++ b/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
@@ -54,7 +54,7 @@ The following sections describe use of the Gradle command-line interface, groupe
 [[sec:command_line_executing_tasks]]
 === Executing tasks
 
-You can run a task and all of its dependencies.
+You can run a task and all of its <<sec:task_dependencies,dependencies>>.
 ----
 ❯ gradle myTask
 ----
